--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: rgb(122, 121, 121);
+  text-shadow: 2px 2px 3px rgba(109, 109, 109, 0.164);
+}
+
+main {
+  /* height: 100vh;
+  background-image: url('assets/bg-image.svg');
+  background-size: cover;
+  background-repeat: no-repeat; */
+}
+
+.search-box {
+  width: 80%;
+  margin: 75px auto 75px;
+}
+
+.search-box .search-bar {
+  /* display: block; */
+  width: 60%;
+  padding: 10px;
+  /* appearance: none; */
+  background: none;
+  /* border: none;
+  outline: none; */
+  /* background-color: rgba(255, 255, 255, 0.5); */
+  /* border-radius: 20px; */
+  /* box-shadow: 0px 3px rgba(160, 160, 160, 0.2); */
+  color: #000000;
+  /* font-size: 18px; */
+  
 }
