--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,17 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 2px 3px rgba(109, 109, 109, 0.164);
+  color: rgb(240, 240, 240);
+
+  text-shadow: 1px 1px 2px rgba(254, 254, 255, 0.322);
   background-image: url('assets/1565.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  width: auto;
+  height: auto;
+
 }
 
 .container-main {
@@ -25,22 +29,6 @@ body {
 .search-box {
   width: 80%;
   margin: 75px auto 75px;
-}
-
-.search-box .search-bar {
-  /* display: block; */
-  width: 60%;
-  padding: 10px;
-  /* appearance: none; */
-  background: none;
-  /* border: none;
-  outline: none; */
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  /* border-radius: 20px; */
-  /* box-shadow: 0px 3px rgba(160, 160, 160, 0.2); */
-  color: #000000;
-  /* font-size: 18px; */
-  
 }
 
 .houly-cards {
